# anolisa

./: AGENT.md  CONTRIBUTING.md  NOTICE
.github/: CODEOWNERS  commitlint.config.json  dependabot.yml  maintainers.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yaml  issue-automation.yml  issue-triage.yml  pr-merged.yml  pr-opened.yml  prelint.yml
docs/: BUILDING.md  BUILDING_CN.md
scripts/: build-all.sh
src/agent-sec-core/: Makefile  README.md  README_CN.md
src/agent-sec-core/linux-sandbox/: README.md
src/agent-sec-core/linux-sandbox/src/: cli.rs  (+2 more)
src/agentsight/: Cargo.toml  Makefile  README.md  README_CN.md  build.rs
src/agentsight/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
src/agentsight/dashboard/src/: App.tsx
src/agentsight/dashboard/src/components/: NavBar.tsx
src/agentsight/dashboard/src/pages/: AtifViewerPage.tsx  ConversationList.tsx  TraceDetailPage.tsx  TraceEventsPage.tsx
src/agentsight/dashboard/src/types/: index.ts
src/agentsight/dashboard/src/utils/: apiClient.ts
src/agentsight/src/: config.rs  lib.rs  unified.rs
src/agentsight/src/aggregator/proctrace/: process.rs
src/agentsight/src/analyzer/: unified.rs
src/agentsight/src/atif/: converter.rs  mod.rs  schema.rs
src/agentsight/src/genai/: builder.rs  sls.rs
src/agentsight/src/parser/: unified.rs
src/agentsight/src/server/: handlers.rs  mod.rs
src/agentsight/src/storage/sqlite/: genai.rs  mod.rs
src/agentsight/src/token_breakdown/: breakdown.rs  classifier.rs  cli.rs  lexer.rs  mod.rs  types.rs
src/agentsight/src/tokenizer/: llm_tok.rs  mod.rs  model_mapping.rs  multi_model.rs
src/agentsight/src/tokenizer/core/: mod.rs
src/agentsight/src/tokenizer/providers/: fallback.rs  mod.rs  qwen.rs
src/agentsight/src/tokenizer/py/: chat_template.py
src/agentsight/src/tokenizer/templates/: test.jinja
src/copilot-shell/: .gitignore  Makefile  README.md  README_CN.md  copilot-shell.spec.in  package-lock.json  package.json
src/copilot-shell/.husky/: pre-commit
src/copilot-shell/scripts/: cosh-wrapper.sh  package-rpm.js  telemetry.js  telemetry_utils.js
src/os-skills/: README.md  README_CN.md  cosh-extension.json
src/os-skills/ai/: cosh-extension.json
src/os-skills/aliyun/: cosh-extension.json
src/os-skills/devops/: cosh-extension.json
src/os-skills/others/: cosh-extension.json
src/os-skills/security/: cosh-extension.json
src/os-skills/system-admin/: cosh-extension.json
(+9 files in other folders)
